; ModuleID = '/home/carl/AnghaBench/torch7/lib/TH/extr_THGeneral.c_maybeTriggerGC.c'
source_filename = "/home/carl/AnghaBench/torch7/lib/TH/extr_THGeneral.c_maybeTriggerGC.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@heapSoftmax = common dso_local global i32 0, align 4
@torchGCData = common dso_local global i32 0, align 4
@heapSoftmaxGrowthThresh = common dso_local global i32 0, align 4
@heapSoftmaxGrowthFactor = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @maybeTriggerGC to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @maybeTriggerGC(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  br i1 true, label %4, label %22

4:                                                ; preds = %1
  %5 = load i32, i32* %2, align 4
  %6 = load i32, i32* @heapSoftmax, align 4
  %7 = icmp sgt i32 %5, %6
  br i1 %7, label %8, label %22

8:                                                ; preds = %4
  %9 = load i32, i32* @torchGCData, align 4
  %10 = call i32 @torchGCFunction(i32 %9)
  %11 = call i32 (...) @applyHeapDelta()
  store i32 %11, i32* %3, align 4
  %12 = load i32, i32* %3, align 4
  %13 = load i32, i32* @heapSoftmax, align 4
  %14 = load i32, i32* @heapSoftmaxGrowthThresh, align 4
  %15 = mul nsw i32 %13, %14
  %16 = icmp sgt i32 %12, %15
  br i1 %16, label %17, label %21

17:                                               ; preds = %8
  %18 = load i32, i32* @heapSoftmax, align 4
  %19 = load i32, i32* @heapSoftmaxGrowthFactor, align 4
  %20 = mul nsw i32 %18, %19
  store i32 %20, i32* @heapSoftmax, align 4
  br label %21

21:                                               ; preds = %17, %8
  br label %22

22:                                               ; preds = %21, %4, %1
  ret void
}

declare dso_local i32 @torchGCFunction(i32) #1

declare dso_local i32 @applyHeapDelta(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
